Update documentation for v0.2.0 - Leptos 0.8+ compatibility milestone
- Update README to reflect Leptos 0.8+ support
- Bump version to 0.2.0 in Cargo.toml
- Update CHANGELOG with v0.2.0 release notes
- Create comprehensive release announcement
- Update compatibility documentation
- Remove outdated 'broken' warnings

--- a/examples/analytics-dashboard/index.html
+++ b/examples/analytics-dashboard/index.html
@@ -14,15 +14,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="module">
-        import init, { main } from './pkg/analytics_dashboard.js';
-        
-        async function run() {
-            await init();
-            main();
-        }
-        
-        run().catch(console.error);
-    </script>
+    <!-- Trunk will automatically inject the WASM loading script -->
 </body>
 </html>
