--- a/examples/traffic-light/index.html
+++ b/examples/traffic-light/index.html
@@ -16,6 +16,7 @@
                 </div>
                 
                 <div class="state-display" data-testid="current-state-display">Red</div>
+                <div class="state-display" data-testid="current-state">Red</div>
                 
                 <div class="controls">
                     <button class="btn-primary" data-testid="timer">Timer</button>
